# GoIT_WEB_HW_6

./: README.md  connect.py  create_tables.py  pyproject.toml  queries_to_DB.py  seed_tables.py  sql_code.py
SQLite/: HW_6_GoIT.db  query_1.sql  query_10.sql  query_11.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
